--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:db": "node scripts/test-db.mjs"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
@@ -20,9 +21,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.3",
     "flag-icons": "^7.5.0",
     "inngest": "^3.45.1",
     "lucide-react": "^0.553.0",
+    "mongodb": "^6.21.0",
     "mongoose": "^8.20.0",
     "next": "16.0.1",
     "react": "19.2.0",
